--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-torch==2.1.0
 transformers==4.35.0
 datasets==2.14.0
 elasticsearch==8.10.0
 sentence-transformers==2.2.2
 openai==1.3.0
 anthropic==0.7.0
-pyyaml==6.0
+pyyaml>=6.0.1
 wandb==0.15.0
 tqdm==4.66.0
 rouge-score==0.1.2
-numpy==1.24.0
-pandas==2.0.0
-scikit-learn==1.3.0
+numpy>=1.26.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
